# Projekt1

./: scoreboard.txt  starawersja.sln
kody projekt/: BOARD.CPP.txt  BOARD.H.txt  CONTROLLER.CPP.txt  CONTROLLER.H.txt  MAIN.CPP.txt  VIEW.CPP.txt  VIEW.H.txt
projekt/: Board.cpp  Board.h  CMakeLists.txt  Controller.cpp  Controller.h  View.cpp  View.h  main.cpp  scoreboard.txt
starawersja/: main.cpp  starawersja.vcxproj  starawersja.vcxproj.filters
x64 — kopia/Debug/: starawersja.exe.recipe  starawersja.ilk  vc143.idb
x64 — kopia/Debug/starawersja.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  starawersja.lastbuildstate
